--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-tvdb": "^4.1.0",
     "react": "16.11.0",
     "react-native": "0.62.1",
+    "react-native-elements": "^1.2.7",
+    "react-native-vector-icons": "^6.6.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
